Fix jump of next lines after cursor on focus/blur

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -80,6 +80,7 @@
 }
 .cmd .cursor {
     border-bottom: 3px solid transparent;
+    margin-bottom: -3px;
     background-clip: content-box;
 }
 .cmd .cursor.blink {
